# albs-provenance-graph-poc

./: LICENSE  README.md  graph.dot  pyproject.toml
albs_graph/: cli.py  errata_adapter.py  export.py  graph.py  mock_data.py  model.py  rpm_adapter.py  sbom_adapter.py
examples/: openssl_graph.json  openssl_summary.txt
tests/: test_graph_model.py  test_mock_pipeline.py
